# shape_registration

./: CMakeLists.txt  README.md  package.xml  requirements.txt
algorithms/: icp_algorithm.cpp
algorithms/include/shape_registration/algorithms/: icp_algorithm.hpp
include/shape_registration/: arm_tracking.hpp  icp_algorithm.hpp  mri_camera_matching.hpp  plane_segmentation.hpp  preprocessing.hpp
launch/: arm_tracking.launch  calibration_checker.launch  eye_on_base_calibration.launch  generate_point_cloud.launch  shape_registration.launch  start_azure_rectifiers.launch  test_depth_projection.launch
scripts/: RegisterCTandRGBD.py  image_saver.py  movement_detector.py  publisher_pyro.py  publisher_pyro.py.EVMRUZ  publisher_pyro_ultrasound.py  ultrasound_segmentation.py
src/: arm_tracking.cpp  icp_algorithm.cpp  kinect_subscriber.cpp  mri_camera_matching.cpp  plane_segmentation.cpp  preprocessing.cpp  tracking.cpp
utils/: aruco_checker_node.cpp  calibration_checker_node.cpp  check_transformation.cpp  control_the_robot.cpp  crop_roi.cpp  find_pca_of_artery.cpp  hand_eye_calibration.cpp  kinect_subscriber.cpp  plane_segmentation.cpp  preprocessing.cpp  roi_crop_creation.cpp  roi_crop_creation.hpp  size_change_effect_icp.cpp  test_depth_projection.cpp  test_depth_vals.cpp  test_icp.cpp
utils/include/shape_registration/utils/: plane_segmentation.hpp  preprocessing.hpp
